[package]
name = "tasd"
version = "0.2.1"
edition = "2021"
authors = ["Luke Stadem <bigbass1997.website@gmail.com>"]
description = "Encoder/decoder for the TASD file format."
license = "MIT"
repository = "https://github.com/bigbass1997/tasd"
keywords = ["dump", "tas", "tasd", "encoding", "decoding"]
categories = ["encoding", "parser-implementations", "data-structures"]

[dependencies]
strum_macros = "0.25"