[package]
name = "tasd"
version = "0.4.0"
edition = "2021"
authors = ["Luke Stadem <bigbass1997.website@gmail.com>"]
description = "Encoder/decoder for the TASD file format."
license = "MIT"
repository = "https://github.com/bigbass1997/tasd"
keywords = ["dump", "tas", "tasd", "encoding", "decoding"]
categories = ["encoding", "parser-implementations", "data-structures"]

[dependencies]
strum = "0.25"
strum_macros = "0.25"